--- a/public/interval/svg/index.html
+++ b/public/interval/svg/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <svg width="800" height="600"></svg>
+  <img src="concept.svg" alt="">
   <script src="main.js" type="module"></script>
 </body>
 </html>
